--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -11,6 +11,24 @@ services:
     volumes:
       - postgres_catalog:/var/lib/postgresql@12/data/
 
+  basketdb:
+    container_name: basketdb
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=BasketDb
+    restart: always
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_basket:/var/lib/postgresql@12/data/
+
+  distributedcache:
+    container_name: distributedcache
+    restart: always
+    ports:
+      - "6379:6379"
+
   catalog.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
@@ -24,5 +42,29 @@ services:
     ports:
       - "6000:8080"
       - "6060:8081"
+    volumes:
+      - ~/.aspnet/https:/https:ro
+
+  basket.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+      - ConnectionStrings__Database=Server=basketdb;Port=5432;Database=BasketDb;User Id=postgres;Password=postgres;Include Error Detail=true
+      - ConnectionStrings__Redis=distributedcache:6379
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=P@ssw0rd
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+      # - GrpcSettings__DiscountUrl=https://discount.grpc:8081
+      # - MessageBroker__Host=amqp://ecommerce-mq:5672
+      # - MessageBroker__UserName=guest
+      # - MessageBroker__Password=guest
+    depends_on:
+      - basketdb
+      - distributedcache
+      # - discount.grpc
+      # - messagebroker
+    ports:
+      - "6001:8080"
+      - "6061:8081"
     volumes:
       - ~/.aspnet/https:/https:ro
