[mrohadi] - feat: consume discount grpc from basket service

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -54,14 +54,14 @@ services:
       - ConnectionStrings__Redis=distributedcache:6379
       - ASPNETCORE_Kestrel__Certificates__Default__Password=P@ssw0rd
       - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
-      # - GrpcSettings__DiscountUrl=https://discount.grpc:8081
+      - GrpcSettings__DiscountUrl=https://discount.grpc:8081
       # - MessageBroker__Host=amqp://ecommerce-mq:5672
       # - MessageBroker__UserName=guest
       # - MessageBroker__Password=guest
     depends_on:
       - basketdb
       - distributedcache
-      # - discount.grpc
+      - discount.grpc
       # - messagebroker
     ports:
       - "6001:8080"
