--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,6 +21,12 @@
       "type": "dotnet",
       "request": "launch",
       "projectPath": "${workspaceFolder}/src/Services/Discount/Discount.Grpc/Discount.Grpc.csproj"
+    },
+    {
+      "name": "C#: Order Debug",
+      "type": "dotnet",
+      "request": "launch",
+      "projectPath": "${workspaceFolder}/src/Services/Order/Order.API/Order.API.csproj"
     }
   ]
 }
