--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
   distributedcache:
     image: redis:8-alpine
 
+  orderdb:
+    image: mcr.microsoft.com/mssql/server:2017-GA-ubuntu
+
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
