--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -38,6 +38,17 @@ services:
     ports:
       - "1433:1433"
 
+  messagebroker:
+    container_name: messagebroker
+    hostname: ecommerce-mq
+    environment:
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
+    restart: always
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+
   catalog.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
@@ -64,14 +75,14 @@ services:
       - ASPNETCORE_Kestrel__Certificates__Default__Password=P@ssw0rd
       - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
       - GrpcSettings__DiscountUrl=https://discount.grpc:8081
-      # - MessageBroker__Host=amqp://ecommerce-mq:5672
-      # - MessageBroker__UserName=guest
-      # - MessageBroker__Password=guest
+      - MessageBroker__Host=amqp://ecommerce-mq:5672
+      - MessageBroker__UserName=guest
+      - MessageBroker__Password=guest
     depends_on:
       - basketdb
       - distributedcache
       - discount.grpc
-      # - messagebroker
+      - messagebroker
     ports:
       - "6001:8080"
       - "6061:8081"
@@ -89,5 +100,26 @@ services:
     ports:
       - "6002:8080"
       - "6062:8081"
+    volumes:
+      - ~/.aspnet/https:/https:ro
+
+  ordering.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+      - ConnectionStrings__Database=Server=orderdb;Database=OrderDb;User Id=sa;Password=SwN12345678;Encrypt=False;TrustServerCertificate=True
+      - MessageBroker__Host=amqp://ecommerce-mq:5672
+      - MessageBroker__UserName=guest
+      - MessageBroker__Password=guest
+      - FeatureManagement__OrderFullfilment=false
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=P@ssw0rd
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+    depends_on:
+      - orderdb
+      - messagebroker
+    ports:
+      - "6003:8080"
+      - "6063:8081"
     volumes:
       - ~/.aspnet/https:/https:ro
