--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,10 @@ services:
     image: redis:8-alpine
 
   orderdb:
-    image: mcr.microsoft.com/mssql/server:2017-GA-ubuntu
+    image: mcr.microsoft.com/mssql/server
+
+  messagebroker:
+    image: rabbitmq:4.0-management-alpine
 
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
@@ -28,6 +31,12 @@ services:
     build:
       context: .
       dockerfile: src/Services/Discount/Discount.Grpc/Dockerfile
+
+  ordering.api:
+    image: ${DOCKER_REGISTRY-}orderingapi
+    build:
+      context: .
+      dockerfile: src/Services/Ordering/Ordering.API/Dockerfile
 
 volumes:
   postgres_catalog:
